@@ -19,11 +19,7 @@
 
 package org.freedesktop.cairo;
 
-import java.lang.foreign.FunctionDescriptor;
-import java.lang.foreign.Linker;
-import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
-import java.lang.foreign.ValueLayout;
+import java.lang.foreign.*;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 
@@ -39,35 +35,36 @@ public interface DestroyFunc {
 
     /**
      * The function to implement as callback in a destroy operation.
-     * 
+     *
+     * @param data the data element being destroyed.
      * @since 1.0
      */
-    void destroy();
+    void destroy(MemorySegment data);
 
     /**
      * The callback that is executed by native code. This method marshals the
-     * parameters and calls {@link #destroy()}.
+     * parameters and calls {@link #destroy}.
      * 
-     * @param data the buffer into which to read the data
+     * @param data the data element being destroyed.
      * @since 1.0
      */
     default void upcall(MemorySegment data) {
-        destroy();
+        destroy(data);
     }
 
     /**
      * Generates an upcall stub, a C function pointer that will call
-     * {@link #upcall(MemorySegment)}.
-     * 
-     * @param scope the scope in which the upcall stub will be allocated
+     * {@link #upcall}.
+     *
+     * @param arena the arena in which the upcall stub will be allocated
      * @return the function pointer of the upcall stub
      * @since 1.0
      */
-    default MemorySegment toCallback(SegmentScope scope) {
+    default MemorySegment toCallback(Arena arena) {
         try {
             FunctionDescriptor fdesc = FunctionDescriptor.ofVoid(ValueLayout.ADDRESS);
             MethodHandle handle = MethodHandles.lookup().findVirtual(DestroyFunc.class, "upcall", fdesc.toMethodType());
-            return Linker.nativeLinker().upcallStub(handle.bindTo(this), fdesc, scope);
+            return Linker.nativeLinker().upcallStub(handle.bindTo(this), fdesc, arena);
         } catch (NoSuchMethodException | IllegalAccessException e) {
             throw new RuntimeException(e);
         }
