@@ -21,13 +21,10 @@ package org.freedesktop.freetype;
 
 import io.github.jwharm.cairobindings.Proxy;
 import io.github.jwharm.cairobindings.Interop;
-import io.github.jwharm.cairobindings.MemoryCleaner;
 
 import java.lang.foreign.Arena;
 import java.lang.foreign.FunctionDescriptor;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentAllocator;
-import java.lang.foreign.SegmentScope;
 import java.lang.foreign.ValueLayout;
 import java.lang.invoke.MethodHandle;
 
@@ -41,6 +38,9 @@ public class Face extends Proxy {
         FreeType2.ensureInitialized();
     }
 
+    // The Arena in which the handle to the Face object was allocated.
+    private Arena allocator = null;
+
     /**
      * Constructor used internally to instantiate a java Face object for a native
      * {@code FT_Face} instance
@@ -49,48 +49,35 @@ public class Face extends Proxy {
      */
     public Face(MemorySegment address) {
         super(address);
-        MemoryCleaner.setFreeFunc(handle(), "FT_Done_Face");
-    }
-
-    /**
-     * Invokes the cleanup action that is normally invoked during garbage collection.
-     * If the instance is "owned" by the user, the {@code destroy()} function is run
-     * to dispose the native instance.
-     */
-    public void destroy() {
-        MemoryCleaner.free(handle());
     }
 
     /**
      * Call {@code FT_Open_Face} to open a font by its pathname.
-     * 
+     * <p>
+     * The resulting Face instance must be cleaned up manually with a call to
+     * {@link #doneFace()}.
+     *
      * @param library      the library resource
      * @param filepathname path to the font file
      * @param faceIndex    See <a href=
      *                     "https://freetype.org/freetype2/docs/reference/ft2-face_creation.html#ft_open_face">FT_Open_Face</a>
      *                     for a detailed description of this parameter.
      */
-    public Face(Library library, String filepathname, long faceIndex) {
-        super(constructNew(library, filepathname, faceIndex));
-        MemoryCleaner.takeOwnership(handle());
-    }
-
-    /*
-     * Helper function for the Face(library, filepathname, faceIndex) constructor
-     */
-    private static MemorySegment constructNew(Library library, String filepathname, long faceIndex) {
+    public static Face newFace(Library library, String filepathname, long faceIndex) {
+        Arena allocator = Arena.ofConfined();
         try {
-            MemorySegment pointer = SegmentAllocator.nativeAllocator(SegmentScope.auto())
-                    .allocate(ValueLayout.ADDRESS.asUnbounded());
-            try (Arena arena = Arena.openConfined()) {
+            MemorySegment pointer = allocator.allocate(ValueLayout.ADDRESS.withTargetLayout(ValueLayout.ADDRESS));
+            try (Arena arena = Arena.ofConfined()) {
                 MemorySegment utf8 = Interop.allocateNativeString(filepathname, arena);
                 int result = (int) FT_New_Face.invoke(library.handle(), utf8, faceIndex, pointer);
                 if (result != 0) {
                     throw new UnsupportedOperationException(
                             "Error " + result + " occurred during FreeType FT_Face initialization");
                 }
+                Face face = new Face(pointer.get(ValueLayout.ADDRESS, 0));
+                face.allocator = allocator;
+                return face;
             }
-            return pointer.get(ValueLayout.ADDRESS, 0);
         } catch (Throwable e) {
             throw new RuntimeException(e);
         }
@@ -99,4 +86,22 @@ public class Face extends Proxy {
     private static final MethodHandle FT_New_Face = Interop.downcallHandle("FT_New_Face",
             FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG,
                     ValueLayout.ADDRESS));
+
+    /**
+     * Discard a given face object, as well as all of its child slots and sizes.
+     */
+    public void doneFace() {
+        try {
+            int ignored = (int) FT_Done_Face.invoke(handle());
+        } catch (Throwable e) {
+            throw new RuntimeException(e);
+        }
+        if (allocator != null) {
+            allocator.close();
+            allocator = null;
+        }
+    }
+
+    private static final MethodHandle FT_Done_Face = Interop.downcallHandle("FT_Done_Face",
+            FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
 }
